# photospider

./: .clang-format  .dockerignore  .gitignore  1.yaml  2.yaml  3.yaml  CMakeLists.txt  CONTEXT.md  CPPLINT.cfg  Dockerfile.ci  LICENSE  Makefile  config.yaml  crop_example.yaml  manual.md  merge.sh  merge2.sh  readme.md  split.sh  tmp2.txt
.github/workflows/: build-ci-image.yml  ci-healthcheck.yml  ci-integration.yml  ci-sanitizer.yml  ci_scheduler_log.yml
apps/graph_cli/: main.cpp
apps/photospiderd/: main.cpp
ci/scripts/: build_integrity.sh  build_smoke_inventory.py  build_smoke_inventory_test.py  build_smoke_test.sh  change_classification.sh  change_classification_test.sh  ci_image_changed.sh  ci_routing_test.sh  common.sh  ctest_full.sh  execution_repeat_test.sh  graph_cli_script_test.sh  healthcheck.sh  integration_plan.sh  integration_suite.sh  plugin_load_test.sh  propagation_script_test.sh  runtime_capability_test.sh  sanitizer_test.sh  scheduler_repeat_test.sh
cli/: graph_cli.cpp
cmake/: PhotospiderConfig.cmake.in
custom_ops/: invert_op.cpp  invert_op_custom_example.cpp  metal_ops_loader.cpp  save_op.cpp  threshold_op.cpp
docs/CI/: github-actions.md
docs/adr/: 0001-graph-state-access-is-not-scheduler-dispatch.md  0002-external-libraries-are-kernel-adapters.md  0003-process-owned-execution-resources.md  0004-opencv-cpu-operations-are-reentrant-provider-work.md  0005-graph-document-ingestion-is-a-classified-transaction.md  0006-kernel-documentation-separates-facts-decisions-targets-and-status.md  0007-compute-runs-and-process-execution-have-separate-owners.md
docs/codebase-structure/: Codebase-Structure-Direction.md  IPC-Protocol-v1.md  IPC-Protocol-v2.md
docs/development/: Testing-and-Validation.md
docs/kernel-architecture/: Benchmark-Spikes.md  Cache-Model.md  Compute-Boundaries.md  Compute-Flow.md  Compute-Service-Split.md  Data-Model.md  Development-Validation.md  Dirty-Region-Propagation.md  Graph-Lifecycle.md  ImageBuffer-Memory-Contract.md  Overview.md  Plugin-ABI.md  Policy-and-Execution-Architecture.md  README.md  Roadmap.md  Scheduler-Architecture.md  Scheduler_Architecture_Spec.md  Terminology.md
docs/outdated/: README.md
docs/roadmap/: Kernel-Evolution.md
include/: cli_autocompleter.hpp  cli_config.hpp  cli_history.hpp  graph_model.hpp  image_buffer.hpp  input_match_state.hpp  node.hpp  node_graph.hpp  path_complete.hpp  plugin_api.hpp  plugin_loader.hpp  ps_types.hpp  terminal_input.hpp  tui_editor.hpp
include/adapter/: buffer_adapter_metal.hpp  buffer_adapter_opencv.hpp
include/benchmark/: benchmark_service.hpp  benchmark_types.hpp  benchmark_yaml_generator.hpp
include/cli/: ask.hpp  ask_yesno.hpp  benchmark_config_editor.hpp  benchmark_service.hpp  cli_autocompleter.hpp  cli_history.hpp  config_editor.hpp  dependency_tree_formatter.hpp  do_traversal.hpp  handle_interactive_save.hpp  node_editor.hpp  node_editor_full.hpp  node_editor_layout.hpp  path_complete.hpp  print_cli_help.hpp  print_repl_help.hpp  process_command.hpp  run_repl.hpp  save_fp32_image.hpp  terminal_input.hpp  tui_editor.hpp
include/kernel/: benchmark_types.hpp  graph_runtime.hpp  graph_state_executor.hpp  interaction.hpp  kernel.hpp  ops.hpp  param_utils.hpp  plugin_manager.hpp  plugin_result.hpp
include/photospider/: public_boundary.hpp
plugins/ops/: invert_op_custom_example.cpp  save_op.cpp  threshold_op.cpp
plugins/policies/: fifo_policy.c
plugins/schedulers/: cpu_work_stealing_example_plugin.cpp  gpu_pipeline_example_plugin.cpp  sdk_example_scheduler.hpp  serial_debug_example_plugin.cpp
scheduler_plugins/: cpu_work_stealing_example_plugin.cpp  destroy_count_scheduler_plugin.cpp  gpu_pipeline_example_plugin.cpp
src/: cli_autocompleter.cpp  cli_config.cpp  cli_history.cpp  image_buffer.cpp  node.cpp  node_graph.cpp  ops.cpp  ops.hpp  path_complete.cpp  plugin_loader.cpp  ps_types.cpp  teminal_input.cpp  terminal_input.cpp  tui_editor.cpp
src/adapter/: buffer_adapter_metal.mm  buffer_adapter_opencv.cpp
src/benchmark/: benchmark_service.cpp  benchmark_yaml_generator.cpp
src/cli/: ask.cpp  ask_yesno.cpp  benchmark_config_editor.cpp  benchmark_service.cpp  benchmark_yaml_generator.cpp  cli_autocompleter.cpp  cli_history.cpp  config_editor.cpp  dependency_tree_formatter.cpp  do_traversal.cpp  handle_interactive_save.cpp  node_editor.cpp  node_editor_full.cpp  node_graph_print.cpp  path_complete.cpp  print_cli_help.cpp  print_repl_help.cpp  process_command.cpp  run_graph_cli.cpp  run_repl.cpp  save_fp32_image.cpp  terminal_input.cpp  tui_editor.cpp
src/host/: embedded_host.cpp
src/kernel/: graph_model.cpp  graph_runtime.cpp  graph_runtime.hpp  graph_runtime.mm  interaction.cpp  interaction.hpp  interaction_benchmark.cpp  kernel.cpp  kernel.hpp  kernel_compute.cpp  kernel_dirty_roi_facade.cpp  kernel_inspection_facade.cpp  kernel_io_cache_facade.cpp  kernel_scheduler_facade.cpp  op_registry_test_access.hpp  plugin_manager.cpp
src/metal/: perlin_noise_metal.hpp  perlin_noise_metal.mm
tests/: run_phase2_cli_host_revalidation.sh  split_compute_service_trace.cpp  test_bad_alloc_boundaries.cpp  test_cli_dirty_snapshot_formatter.cpp  test_compute_service_split.cpp  test_gpu_pipeline_scheduler.cpp  test_graph_topology_boundaries.cpp  test_host_adapter.cpp  test_kernel_contracts.cpp  test_milestone2.cpp  test_milestone3.cpp  test_milestone34.cpp  test_node_editor_layout.cpp  test_op_registry_m31.cpp  test_plugin_manager.cpp  test_propagation.cpp  test_propagation_contracts.cpp  test_scheduler.cpp  test_scheduler_plugin_loader.cpp  verify_cache_root_cli.py  verify_cli_inspect_dirty.py  verify_compute_service_public_api.py  verify_dirty_control_lane.py  verify_graph_cli_option_bad_alloc.py  verify_no_removed_output_cache.py  verify_remove_graphruntime_worker_queue.py  verify_scheduler_autoscan_cli.py  verify_scheduler_config_cli.py  verify_scheduler_ready_dispatch.py
tests/integration/: cmake_build_smoke_support.py  (+36 more)
util/: 1.yaml  3.yaml  3d.py  4.yaml  5.yaml  change.txt  dataflow.md  fuckcode.txt  kernel.py  out.txt  test_transform.yaml
(+632 files in other folders)
